# ccg-gateway

./: CLAUDE.md  OPTIMIZATION_ACTION_PLAN.md  OPTIMIZATION_LOW_PRIORITY.md  README-en.md  README.md  RELEASE.md  REMAINING_OPTIMIZATIONS.md  agent-template-guide.md  dev.bat  modify.js  modify2.js  release.sh  start-backend.bat  start.bat
.github/workflows/: release.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py
backend/app/api/v1/: logs.py  sessions.py  settings.py
backend/app/core/: config.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: cli_sync_service.py  log_service.py  proxy_service.py  session_service.py  settings_service.py
desktop/: ccg-gateway.spec  main.py  tray.py
docs/: agent-integration-final-design.md  agent-template-authoring-guide.md
docs/superpowers/plans/: 2026-04-04-unify-plugins-ui.md  2026-04-07-plugin-cache-refactoring.md
docs/superpowers/specs/: 2024-03-25-frontend-redesign-design.md  2026-04-11-color-variables-design.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  components.d.ts
frontend/src/api/: agents.ts  credentials.ts  logs.ts  mcp.ts  plugins.ts  prompts.ts  providers.ts  scheduledTasks.ts  sessions.ts  settings.ts  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/agent-definitions/: agent-definition.schema.json  claude_code.json  codex.json  gemini.json  kimi_code.json  opencode.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_launch.rs  commands.rs  config.rs  lib.rs  main.rs  time.rs
(+109 files in other folders)
